// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find-module should find module 1`] = `
Array [
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "apps/.gitignore",
  "apps/test/project.json",
  "apps/test/public/favicon.ico",
  "apps/test/src/app/app.config.ts",
  "apps/test/src/app/app.css",
  "apps/test/src/app/app.html",
  "apps/test/src/app/app.routes.ts",
  "apps/test/src/app/app.ts",
  "apps/test/src/app/nx-welcome.ts",
  "apps/test/src/app/other/other.module.ts",
  "apps/test/src/app/test/test.component.html",
  "apps/test/src/app/test/test.component.scss",
  "apps/test/src/app/test/test.component.spec.ts",
  "apps/test/src/app/test/test.component.ts",
  "apps/test/src/app/test/test.module.ts",
  "apps/test/src/index.html",
  "apps/test/src/main.ts",
  "apps/test/src/styles.css",
  "apps/test/tsconfig.app.json",
  "apps/test/tsconfig.json",
  "libs/.gitignore",
  "nx.json",
  "package.json",
  "tsconfig.base.json",
]
`;

exports[`find-module should find module 2`] = `
"import { NgModule } from '@angular/core';
import { CommonModule } from '@angular/common';
import { TestComponent } from './test.component';



@NgModule({
  declarations: [
    TestComponent
  ],
  imports: [
    CommonModule
  ]
})
export class TestModule { }
"
`;

exports[`find-module should find standalone component 1`] = `
Array [
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "apps/.gitignore",
  "apps/test/project.json",
  "apps/test/public/favicon.ico",
  "apps/test/src/app/app.config.ts",
  "apps/test/src/app/app.css",
  "apps/test/src/app/app.html",
  "apps/test/src/app/app.routes.ts",
  "apps/test/src/app/app.ts",
  "apps/test/src/app/nx-welcome.ts",
  "apps/test/src/app/test/test.component.html",
  "apps/test/src/app/test/test.component.scss",
  "apps/test/src/app/test/test.component.spec.ts",
  "apps/test/src/app/test/test.component.ts",
  "apps/test/src/app/test/test.module.ts",
  "apps/test/src/index.html",
  "apps/test/src/main.ts",
  "apps/test/src/styles.css",
  "apps/test/tsconfig.app.json",
  "apps/test/tsconfig.json",
  "libs/.gitignore",
  "nx.json",
  "package.json",
  "tsconfig.base.json",
]
`;

exports[`find-module should find standalone component 2`] = `
"import { NgModule } from '@angular/core';
import { CommonModule } from '@angular/common';



@NgModule({
  declarations: [],
  imports: [
    CommonModule
  ]
})
export class TestModule { }
"
`;
